--- a/JMXMiJia/JMXMiJia/Classes/Info/View/JXMessageTableViewCell.xib
+++ b/JMXMiJia/JMXMiJia/Classes/Info/View/JXMessageTableViewCell.xib
@@ -38,7 +38,7 @@
                             <constraint firstAttribute="width" constant="20" id="6jf-CV-VaC"/>
                             <constraint firstAttribute="height" constant="20" id="bi3-eB-u3Q"/>
                         </constraints>
-                        <state key="normal" image="accessory_down"/>
+                        <state key="normal" image="accessory_right"/>
                         <state key="selected" image="accessory_up"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你挂科了你挂科了你挂科了你挂科了你挂科了你挂科了你挂科了你挂科了你挂科了你挂科了" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UNu-Q5-bkz">
@@ -108,7 +108,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="accessory_down" width="21" height="21"/>
+        <image name="accessory_right" width="6" height="13"/>
         <image name="accessory_up" width="21" height="21"/>
         <image name="info_icon" width="18" height="19"/>
     </resources>
