--- a/JMXMiJia/JMXMiJia/Classes/StudentProfile/View/JXHelpTableViewCell.xib
+++ b/JMXMiJia/JMXMiJia/Classes/StudentProfile/View/JXHelpTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="helpCell" rowHeight="95" id="KGk-i7-Jjw" customClass="JXHelpTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="helpCell" rowHeight="95" id="KGk-i7-Jjw" customClass="JXHelpTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="95"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -54,15 +54,15 @@
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
+                        <exclude reference="6fz-co-YBC"/>
+                        <exclude reference="Uuj-wt-kGa"/>
+                        <exclude reference="fh9-kx-Zce"/>
                         <exclude reference="1Gu-Ta-B3i"/>
                         <exclude reference="4XW-1n-ReC"/>
                         <exclude reference="8QG-jZ-Eu3"/>
                         <exclude reference="DSK-7U-BZd"/>
                         <exclude reference="F0Z-Tr-2Dg"/>
                         <exclude reference="hqR-9o-5zY"/>
-                        <exclude reference="6fz-co-YBC"/>
-                        <exclude reference="Uuj-wt-kGa"/>
-                        <exclude reference="fh9-kx-Zce"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
